<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layout_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/screen_width"
    android:layout_height="@dimen/screen_height">

    <LinearLayout
        android:id="@+id/view_scores"
        android:layout_width="140px"
        android:layout_height="@dimen/screen_height"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center">

        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:background="@color/white"
            android:layout_margin="10px" />

        <TextView
            android:text="@string/score_text"
            style="@style/text_scores" />

        <TextView
            android:id="@+id/text_score"
            android:text="@string/score"
            style="@style/text_scores" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:background="@color/white"
            android:layout_margin="10px" />

        <TextView
            android:text="@string/best_text"
            style="@style/text_scores" />

        <TextView
            android:id="@+id/text_best"
            android:text="@string/best"
            style="@style/text_scores" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:background="@color/white"
            android:layout_margin="10px" />

        <TextView
            android:id="@+id/text_gameover"
            android:text="@string/gameover"
            style="@style/text_scores"
            android:gravity="center"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:visibility="invisible" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:background="@color/white"
            android:layout_margin="10px" />

    </LinearLayout>

    <GridView
        android:id="@+id/view_grid"
        android:layout_toRightOf="@+id/view_scores"
        android:layout_alignParentTop="true"
        android:layout_width="@dimen/screen_height"
        android:layout_height="@dimen/screen_height"
        android:columnWidth="@dimen/grid_item_width"
        android:numColumns="4"
        android:paddingTop="10px"
        android:paddingLeft="6px"
        android:horizontalSpacing="4px"
        android:verticalSpacing="4px"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/view_nerds"
        android:layout_toRightOf="@+id/view_grid"
        android:layout_alignParentTop="true"
        android:layout_width="140px"
        android:layout_height="@dimen/screen_height"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/values"
            android:textColor="@color/white"
            android:textSize="30px"
            android:paddingTop="5px"
            android:layout_gravity="center_horizontal" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:background="@color/white"
            android:layout_margin="@dimen/margin_divider" />

        <TextView
            android:id="@+id/text_number_2"
            android:text="@string/number_2"
            style="@style/text_nerds"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/text_number_4"
            android:text="@string/number_4"
            style="@style/text_nerds"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/text_number_8"
            android:text="@string/number_8"
            style="@style/text_nerds"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/text_number_16"
            android:text="@string/number_16"
            style="@style/text_nerds"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/text_number_32"
            android:text="@string/number_32"
            style="@style/text_nerds"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/text_number_64"
            android:text="@string/number_64"
            style="@style/text_nerds"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/text_number_128"
            android:text="@string/number_128"
            style="@style/text_nerds"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/text_number_256"
            android:text="@string/number_256"
            style="@style/text_nerds"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/text_number_512"
            android:text="@string/number_512"
            style="@style/text_nerds"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/text_number_1024"
            android:text="@string/number_1024"
            style="@style/text_nerds"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/text_number_2048"
            android:text="@string/number_2048"
            style="@style/text_nerds"
            android:visibility="invisible" />

    </LinearLayout>

</RelativeLayout>
