<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_restart"
        android:title="@string/menu_restart"
        android:icon="@drawable/ic_menu_restart" />

    <item
        android:id="@+id/menu_mode"
        android:title="@string/menu_mode"
        android:icon="@drawable/ic_menu_mode" />

    <item
        android:id="@+id/menu_network"
        android:title="@string/menu_network_enable"
        android:icon="@drawable/ic_menu_network" />

    <item
        android:id="@+id/menu_custom"
        android:title="@string/menu_custom"
        android:icon="@drawable/ic_menu_custom" />

    <item
        android:id="@+id/menu_quit"
        android:title="@string/menu_quit"
        android:icon="@drawable/ic_menu_quit" />

</menu>